# mail_client

./: Cargo.toml  \
src/: api.rs  email.rs  main.rs  models.rs  testing.rs
src/api/: api_client.rs  api_email_dto.rs  errors.rs
src/email/: email_account.rs  email_client.rs  email_message.rs  errors.rs  traits.rs  user_credentials.rs  util.rs
src/email/traits/: email_receiver.rs  email_sender.rs
src/email/util/: body_parsing.rs  header_parsing.rs  mapping_to_extern_crates.rs
src/models/: email_message.rs
src/state/: app_state.rs
src/testing/: home_screen_state_test.rs
src/ui/: home_screen.rs
