[package]
name = "mail_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
clap= "4.4.0"
color-eyre = "0.6.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
