[package]
name = "mail_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
clap= "4.4.0"
color-eyre = "0.6.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
lettre = "0.10"
imap = "2.4.1"
native-tls = "0.2.11"
eyre = "0.6.8"
mailparse = "0.14.0"
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
